<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wanderlust</string>
    <string name="title_section_map">Map</string>
    <string name="title_section_poi">POI</string>
    <string name="title_section_meetup">MeetUps</string>
    <string name="title_section_friends">Friends</string>
    <string name="title_section_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_addpoi">Add POI</string>
    <string name="action_addmeetup">Add MeetUp</string>
    <string name="new_poi_name_label">Name</string>
    <string name="new_poi_address_label">Address</string>
    <string name="new_poi_description_label">Description</string>
    <string name="new_poi_photo_upload">Upload a photo (optional)</string>
    <string name="new_poi_browse_button">Browse</string>
    <string name="new_poi_image_text">image.png</string>
    <string name="new_poi_create_button">Create New Point of Interest</string>
    <string name="new_meetup_poi_name">Name</string>
    <string name="new_meetup_date">Date</string>
    <string name="new_meetup_time">Time</string>
    <string name="new_meetup_radio_text">All day event</string>
    <string name="new_meetup_invite_text">Invites (username or email addresses, separated by commas)</string>
    <string name="new_meetup_create_button">Create New MeetUp</string>
    <string name="app_name">Wanderlust</string>
    <string name="action_settings">Settings</string>
    <string name="create_meetup">Create MeetUp</string>
    <string name="more_information">More Information</string>
    <string name="meet_up_details">MeetUp details</string>
    <string name="date_and_time">Date and Time</string>
    <string name="location">Location</string>
    <string name="picture">Picture</string>
    <string name="edit">Edit</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="hint_search_pois">Search for Points of Interest</string>
    <string name="hint_search_meetups">Search for MeetUps</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_poi__detail">POI Details</string>
    <string name="title_activity_meetup__detail">Meetup_Detail</string>
    <string name="title_activity_new__poi">New POI</string>
    <string name="title_activity_new__meetup">New MeetUp</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_blank">---</string>
    <string name="label_details">Details</string>
    <string name="label_meetup">Create MeetUp</string>
    <string name="new_poi_current_location">Use my current location</string>
    <string name="new_meetUp_private">Make this meetUp private</string>
    

</resources>
