<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/time_text_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp" >

            <TextView
                android:id="@+id/poi_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_meetup_poi_name" />
       
            <EditText
                android:id="@+id/poi_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:inputType="text" />
       
            <TextView
                android:id="@+id/address_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_poi_address_label" 
                android:layout_marginTop="10dp"/>
   

            <EditText
                android:id="@+id/address_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />
       
            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_meetup_date"
                android:layout_marginTop="10dp" />
       
            <EditText
                android:id="@+id/date_field2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />
        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal" >
        
		        <TextView
		            android:id="@+id/time_text"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:layout_below="@+id/date_field_area"
		            android:text="@string/new_meetup_time" />
		
		        <RadioButton
		            android:id="@+id/event_radio_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_alignTop="@+id/time_text"
		            android:layout_marginRight="11dp"
		            android:text="@string/new_meetup_radio_text"
		            android:layout_marginLeft="135dp"/>
        
        </LinearLayout>
      
        <EditText
                android:id="@+id/time_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />
      
        <TextView
                android:id="@+id/descr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_poi_description_label"
                android:layout_marginTop="10dp" />
      
        <EditText
                android:id="@+id/descr_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />
   

        <TextView
            android:id="@+id/invite_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/invite_input"
            android:text="@string/new_meetup_invite_text"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/invite_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_area"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/create_meetup_button"
            style="@style/AppBaseTheme"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_meetup_create_button" />

</LinearLayout>