<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@style/AppBaseTheme" >

    <LinearLayout
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp" >

        <TextView
            android:id="@+id/namelabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_poi_name_label"
            android:textSize="@dimen/activity_horizontal_margin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="21dp" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name_field" >
    </LinearLayout>

    <EditText
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name_text"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/location_label"
        android:layout_marginTop="22dp"
        android:text="@string/new_poi_address_label" />

    <LinearLayout
        android:id="@+id/address_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/address_text"
        android:layout_marginTop="14dp" >

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPostalAddress" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/address_field"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_poi_description_label" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/desc_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/desc_label"
        android:layout_marginTop="38dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp" >
    </LinearLayout>

    <TextView
        android:id="@+id/poi_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/desc_field"
        android:layout_marginTop="26dp"
        android:layout_weight="1"
        android:text="@string/new_poi_photo_upload" />

    <EditText
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/desc_label"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/browse_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/poi_name_text" >
    </LinearLayout>

    <Button
        android:id="@+id/create_meetup_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/browse_area"
        android:layout_marginTop="16dp"
        android:text="@string/new_poi_browse_button" />

    <TextView
        android:id="@+id/photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_meetup_button"
        android:layout_alignBottom="@+id/create_meetup_button"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/create_meetup_button"
        android:text="@string/new_poi_image_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/create_button_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_poi_create_button" />
    </LinearLayout>

</RelativeLayout>