<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/time_text_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/poi_text_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp" >

            <TextView
                android:id="@+id/poi_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_meetup_poi_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/poi_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="14dp" >

            <EditText
                android:id="@+id/poi_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/poi_name_field"
            android:layout_marginTop="28dp" >

            <TextView
                android:id="@+id/address_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_poi_address_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/address_label"
            android:layout_marginTop="14dp" >

            <EditText
                android:id="@+id/address_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/address_area" >

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_meetup_date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_field_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/date_text_view" >

            <EditText
                android:id="@+id/date_field2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />
        </LinearLayout>

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/date_field_area"
            android:text="@string/new_meetup_time" />

        <RadioButton
            android:id="@+id/event_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/time_text"
            android:layout_marginRight="11dp"
            android:text="@string/new_meetup_radio_text" />

        <LinearLayout
            android:id="@+id/time_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/event_radio_button"
            android:layout_marginTop="13dp" >

            <EditText
                android:id="@+id/time_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/desc_text_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/time_input_field" >

            <TextView
                android:id="@+id/descr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_poi_description_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descr_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/desc_text_area" >

            <EditText
                android:id="@+id/descr_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/invite_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/descr_field" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/invite_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/invite_area" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invite_input"
            android:layout_marginTop="28dp"
            android:layout_toRightOf="@+id/poi_text_area" >
        </LinearLayout>

        <Button
            android:id="@+id/create_meetup_button"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_toRightOf="@+id/poi_text_area"
            android:text="@string/new_meetup_create_button" />

        <TextView
            android:id="@+id/invite_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/invite_input"
            android:text="@string/new_meetup_invite_text" />

        <EditText
            android:id="@+id/invite_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_area"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="textMultiLine" />

    </RelativeLayout>

</LinearLayout>