<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meet_up_title"
        android:layout_centerHorizontal="true"
        android:text="Edit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/meet_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/meet_up_details"
        android:textColor="#171717"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/date_and_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/who_is_going"
        android:layout_marginTop="75dp"
        android:text="@string/date_and_time"
        android:background="#3D3D3D"
        android:textColor="#C6C6C6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:background="#3D3D3D"
        android:textColor="#C6C6C6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/who_is_going"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/location"
        android:layout_marginTop="75dp"
        android:text="Who&apos;s Going"
        android:background="#3D3D3D"
        android:textColor="#C6C6C6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/date_and_time"
        android:layout_marginTop="75dp"
        android:text="@string/picture"
        android:background="#3D3D3D"
        android:textColor="#C6C6C6"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Invite Friends" />

    <TextView
        android:id="@+id/location_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/location"
        android:layout_above="@+id/w0"
        android:layout_marginTop="28dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ipsum pellentesque."
        android:textColor="#171717" />

    <TextView
        android:id="@+id/who_is_going_info"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/who_is_going"
        android:layout_marginTop="28dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ipsum pellentesque."
        android:textColor="#171717" />

    <TextView
        android:id="@+id/date_and_time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/date_and_time"
        android:layout_marginTop="28dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ipsum pellentesque."
        android:textColor="#171717" />

    <ImageView
        android:id="@+id/location_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/picture"
        android:src="@drawable/ic_launcher"
        android:contentDescription="meetup_pic"
         />

</RelativeLayout>