<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#33B5E5"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/markerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />
	
	<FrameLayout
	    android:id="@+id/topBar2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left|top"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/btn_star" />
        
		<LinearLayout
		    android:id="@+id/topBar1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:orientation="vertical" >
	        
	        	
	        <TextView
	            android:id="@+id/topBar_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/label_blank"
	            android:layout_marginTop="3dp"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#3D3D3D" />
	        
	        <TextView
	            android:id="@+id/topBar_address"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginTop="2dp"
	            android:text="@string/label_blank"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#3D3D3D" />
	    </LinearLayout>
	</FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/showDetailsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.27"
            android:background="#3D3D3D"
            android:onClick="showDetails"
            android:text="@string/label_details"
            android:textColor="#C6C6C6" />

        <Button
            android:id="@+id/meetUpButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="0.12"
            android:background="#3D3D3D"
            android:onClick="createMeetup"
            android:text="@string/label_meetup"
            android:textColor="#C6C6C6" />
    </LinearLayout>

</LinearLayout>